--- a/wp-content/uploads/dynamic_avia/avia_posts_css/post-2009.css
+++ b/wp-content/uploads/dynamic_avia/avia_posts_css/post-2009.css
@@ -7,7 +7,7 @@ padding:0px 0px 0px 0px !important;
 
 .flex_column.av-l3szqp26-6c845cdd5c5796645be32d0377756b4e{
 padding:30px 30px 30px 30px;
-background:url(/wp-content/uploads/2023/11/c1de8e1f2af3183107f63216cb2544be.png) 50% 50% no-repeat scroll ;
+background:url(./../../2023/11/c1de8e1f2af3183107f63216cb2544be.png) 50% 50% no-repeat scroll ;
 }
 .flex_column.av-l3szqp26-6c845cdd5c5796645be32d0377756b4e .avia-curtain-reveal-overlay{
 background:#ffffff;
