--- a/wp-content/themes/alsijil/css/layout.css
+++ b/wp-content/themes/alsijil/css/layout.css
@@ -2074,7 +2074,7 @@ div #menu-item-shop.cart_dropdown{
 }
 
 .ajax_load_inner{
-	background: url("/wp-content/themes/alsijil/images/layout/loading.gif") no-repeat scroll center center #fff;
+	background: url("./../images/layout/loading.gif") no-repeat scroll center center #fff;
 	opacity: 0.5;
 	position: absolute;
 	top:0;
